ndim-git-utils 1.22.x
  - Improved INSTALL file with local configured data

ndim-git-utils 1.22
  - non user visible changes and small fixes

ndim-git-utils 1.20.19
  - migrate to "git foo" style of commands (instead of "git-foo")
  - improve installation instructions
  - git-amb: New git-config options amb.params.* for passing params
  - git-rebase-subtree: Remember the branch originally checked out,
      and check it out again after the rebasing is finished.

ndim-git-utils 1.20
  First public release.